# quickmaths

./: Cargo.toml  README.md
src/: digits.rs  fraction.rs  lib.rs  poly.rs  series.rs  stats.rs
src/factor/: mod.rs  prime_factors.rs
src/fraction/: gamma.rs  mod.rs
src/integral/: mod.rs  riemann.rs
src/stats/: error.rs  mod.rs  normal.rs
