[package]
name = "quickmaths"
description = "A collection of algorithms for generic mathematics"
version = "0.1.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/matthunz/quickmaths"

[features]
default = ["std"]
std = []

[dependencies]
num = "0.4.0"
rand = "0.8.5"

[dev-dependencies]
approx = "0.5.1"
